--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -13,7 +13,7 @@ body {
 	text-rendering: optimizeLegibility;
 	font-optical-sizing: auto;
 
-	background: rgb(17, 24, 39);
+	background: #171719;
 	color: #fff;
 }
 
