--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -15,6 +15,24 @@ body {
 
 	background: #171719;
 	color: #fff;
+
+	position: relative;
+
+	&::before {
+		content: '';
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		--size: 11px;
+		--color: rgba(255, 255, 255, 0.04);
+
+		z-index: -2;
+
+		background: #17171900 radial-gradient(var(--color) 10%, transparent 1%);
+		background-size: var(--size) var(--size);
+	}
 }
 
 .page-container {
